--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>fmlife Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
   <dependencies>
   
     <dependency>
@@ -99,7 +100,18 @@
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>8.0.18</version>
 	</dependency>
-	
+
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>jstl</artifactId>
+		<version>1.2</version>
+	</dependency>
+
+	<dependency>
+		<groupId>javax.servlet.jsp</groupId>
+		<artifactId>javax.servlet.jsp-api</artifactId>
+		<version>2.3.3</version>
+	</dependency>
   </dependencies>
   
   <properties>
